fix config file